Code cleanup part 1 - automatic